Ensure sufficient contrast for text

--- a/packages/zedocs/src/styles/_properties.scss
+++ b/packages/zedocs/src/styles/_properties.scss
@@ -57,23 +57,23 @@
   --lm-background-secondary: rgb(227, 227, 227);
   --lm-sidebar-background: rgb(250, 250, 250);
   --lm-sidebar-hover: rgb(200, 200, 200);
-  --lm-theme: rgb(92, 123, 244);
+  --lm-theme: rgb(63, 101, 249);
   --lm-shadow: rgba(0, 0, 0, 0.2);
   --lm-code-border: 1px solid var(--background-secondary);
   --lm-code-background: rgb(250, 250, 250);
-  --lm-code-comment: rgb(142, 142, 142);
-  --lm-code-primary: rgb(92, 123, 244);
-  --lm-code-secondary: rgb(255, 20, 20);
-  --lm-code-value: rgb(227, 35, 144);
-  --lm-code-string: rgb(45, 145, 84);
+  --lm-code-comment: rgb(115, 115, 115);
+  --lm-code-primary: rgb(63, 101, 249);
+  --lm-code-secondary: rgb(230, 8, 8);
+  --lm-code-value: rgb(218, 17, 131);
+  --lm-code-string: rgb(9, 133, 60);
   --lm-code-error: rgb(170, 13, 26);
   --lm-code-operator: rgb(19, 112, 116);
   --lm-warning-background: rgb(243, 244, 172);
-  --lm-warning-text: rgb(161, 124, 23);
+  --lm-warning-text: rgb(136, 103, 15);
   --lm-info-background: rgb(214, 222, 255);
-  --lm-info-text: rgb(92, 123, 244);
-  --lm-note-background: rgb(161, 255, 205);
-  --lm-note-text: rgb(45, 153, 95);
+  --lm-info-text: rgb(52, 86, 218);
+  --lm-note-background: rgb(177, 251, 230);
+  --lm-note-text: rgb(32, 121, 73);
 
   --dm-text-primary: rgb(255, 255, 255);
   --dm-text-secondary: rgb(200, 200, 200);
@@ -91,13 +91,13 @@
   --dm-code-value: rgb(255, 105, 187);
   --dm-code-string: rgb(63, 236, 130);
   --dm-code-error: rgb(196, 86, 95);
-  --dm-code-operator: rgb(234, 57, 38);
-  --dm-warning-background: rgb(161, 124, 23);
-  --dm-warning-text: rgb(237, 237, 69);
+  --dm-code-operator: rgb(255, 97, 80);
+  --dm-warning-background: rgb(136, 103, 11);
+  --dm-warning-text: rgb(249, 249, 106);
   --dm-info-background: rgb(47, 68, 150);
   --dm-info-text: rgb(175, 191, 255);
   --dm-note-background: rgb(47, 109, 76);
-  --dm-note-text: rgb(83, 248, 160);
+  --dm-note-text: rgb(81, 251, 160);
 
   --header-height: 64px;
   --sidebar-width: 300px;
